editor-components/intro-section/intro-section10/intro-section10.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;

  .max-content {
    width: 100%;
    position: relative;
    z-index: 1;

    .intro-wrapper {
      .vertical-content {
        display: contents;
      }

      display: flex;
      align-items: center;
      justify-content: space-between;
      gap: var(--composer-gap-xl);
      width: 100%;

      .left-content {
        flex: 1 1 50%;
        display: flex;
        flex-direction: column;
        justify-content: center;

        .subtitle {
          margin-bottom: var(--composer-gap-sm);
          text-align: left;
          align-self: flex-start;
          width: auto;
          margin-left: 0 !important;
          margin-right: auto !important;
        }

        .title {
          margin-bottom: calc(var(--composer-gap-sm) / 1.5);
          text-align: left;
        }

        .title2 {
          color: var(--composer-primary-color);
          text-align: left;
        }
      }

      .right-content {
        flex: 1 1 50%;
        display: flex;
        flex-direction: column;
        justify-content: center;

        .description {
          color: var(--composer-font-color-primary);
          margin-bottom: var(--composer-gap-md);
          text-align: left;
        }

        .button-wrapper {
          .button {
            display: flex;
            justify-content: var(--composer-content-alignment, flex-start);

            .button-text {
              content: "";
            }
          }
        }

        .action-buttons {
          display: flex;
          gap: var(--composer-gap-md);
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    padding: 60px 0;

    .intro-wrapper {
      flex-direction: row;
      gap: var(--composer-gap-lg);

      .left-content,
      .right-content {
        flex: 1 1 50%;
        width: 100%;
      }

      .action-buttons {
        flex-wrap: wrap;
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    padding: 40px 0;

    .intro-wrapper {
      flex-direction: column;
      gap: var(--composer-gap-md);

      .action-buttons {
        display: flex;
        gap: var(--composer-gap-xs);
      }
    }
  }
}

